cilium-cli/connectivity/builder/manifests/client-ingress-from-client2-knp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client-ingress-from-client2
spec:
  podSelector:
    matchLabels:
      kind: client
  ingress:
    - from:
        - podSelector:
            matchLabels:
              other: client
            matchExpressions:
            - { key: io.cilium.k8s.policy.cluster, operator: Exists }
